--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -141,3 +141,14 @@
         @apply bg-background text-foreground;
     }
 }
+
+
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !important;
+  -webkit-text-fill-color: #1f2937 !important;
+}
+::selection {
+  background: rgba(22, 163, 74, 0.3); /* verde-600 translúcido */
+  color: #000;
+}
+
